<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="200sp"
            android:layout_height="250sp"
            android:layout_marginEnd="10sp"
            android:contentDescription="@string/movie_poster"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/blade_runner"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/release_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:text="2018"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textColor="@android:color/white"
                android:textSize="18sp" />



        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/description"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/back" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>